package classes;

import abstracts.User;

public class Admin extends User {
    public Admin(String username, String password, double balance) {
        super(username, password, balance);
    }
}
