package classes;

import abstracts.User;

public class Courier extends User {
    public Courier(String username, String password, double balance) {
        super(username, password, balance);
    }
}
