package classes;

import abstracts.User;

public class Seller extends User {
    public Seller(String username, String password, double balance) {
        super(username, password, balance);
    }
}
