package interfaces;

public interface IRouterCallback {
    boolean execute();
}
